--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="utf-8"/>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <link rel="icon" href="%PUBLIC_URL%/apple-touch-icon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link
             rel="stylesheet"
