--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" style="background: rgb(0, 0, 0); background-color: black;">
 <head>
     <meta charset="utf-8"/>
     <link rel="icon" href="%PUBLIC_URL%/apple-touch-icon.png"/>
